# radeontop

./: README.md  meson.build  meson_options.txt
include/: meson.build  version.h
include/radeontop/: radeontop.h
man/: meson.build
src/: amdgpu.c  auth.c  context.c  detect.c  dump.c  family_str.c  meson.build  radeon.c  radeontop.c  ticks.c  ui.c  utils.c
translations/: meson.build
